Issue #TG-10 feat: Upgraded JDK-8 to JDK-11 for learner-service